# Prepare

./: CMakeLists.txt  main.cpp
place/: BlueHeadquarter.cpp  BlueHeadquarter.h  City.cpp  City.h  Headquarter.cpp  Headquarter.h  RedHeadquarter.cpp  RedHeadquarter.h
tools/: Factory.cpp  Factory.h  Game.cpp  Game.h  Type.h
warrior/: Dragon.cpp  Dragon.h  Iceman.cpp  Iceman.h  Lion.cpp  Lion.h  Ninja.cpp  Ninja.h  Warrior.cpp  Warrior.h  Wolf.cpp  Wolf.h
weapons/: Arrow.cpp  Arrow.h  Bomb.cpp  Bomb.h  Sword.cpp  Sword.h  Weapon.cpp  Weapon.h  WeaponType.h
